# src/modules/user/useCases/ForgotPassword/ForgotPasswordSchema.ts
@@ -1,0 +1,11 @@
+import { object, string } from 'zod';
+
+const ForgotPasswordSchema = object({
+  email: string().email(),
+});
+
+interface ForgotPasswordType {
+  email: string;
+}
+
+export { ForgotPasswordSchema, ForgotPasswordType };
